controllers for assers classification and subgroup

--- a/EqUiWebUi/Areas/user_management/Views/users/_settings.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/users/_settings.cshtml
@@ -23,11 +23,15 @@
 <div class="card">
     <div class="card-header bg-warning">
         <h5 class="card-title text-white">
-            Asset filtering
+            Asset management
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h5>
     </div>
     <div class="card-body">
+        <h4>Assets</h4>
+        <p><a href="~/Assets/Index" class="btn btn-primary btn-sm">Assets &raquo;</a>Asset list from maximo (joined with controllers)</p>
+        <hr />
+        <h4>Asset Filtering</h4>
         <p><a href="~/user_management/AreaFilters/Index" class="btn btn-primary btn-sm">LocationFilters &raquo;</a>Beheer van location filters</p>
         <p><a href="~/user_management/c_ownership/Index" class="btn btn-primary btn-sm">Ownership &raquo;</a>Beheer van ownership filters</p>
     </div>
