--- a/EqUiWebUi/Views/EQUISetup/_settings.cshtml
+++ b/EqUiWebUi/Views/EQUISetup/_settings.cshtml
@@ -13,10 +13,12 @@
         <h4>Datacollectors</h4>
         <p><a href="~/vasc/vasc/index" class="btn btn-primary btn-sm">VASC &raquo;</a>Manage VASC (ABB datacollector)</p>
         <hr />
-        <h4>ClassificationTool</h4>
-        <p><a href="~/Classification/ClassificationTool" class="btn btn-primary btn-sm">LogClassTool &raquo;</a>Tool for classifcation of errors</p>
-        <p><a href="~/c_logclasssystem/Index" class="btn btn-warning btn-sm">LogClassSystems &raquo;</a>Manage classiciation systems</p>
-        <p><a href="~/c_LogclassRules/Index" class="btn btn-warning btn-sm">LogClassRules &raquo;</a>Manage classiciation rules</p>
+        <h4>Classification</h4>
+        <p><a href="~/Classification/ClassificationTool" class="btn btn-primary btn-sm">LogClassTool &raquo;</a>Tool for classification of errors (put errors in a class and subgroup)</p>
+        <p><a href="~/c_logclasssystem/Index" class="btn btn-warning btn-sm">c_Logclasssystem &raquo;</a>Manage classification systems</p>
+        <p><a href="~/c_LogclassRules/Index" class="btn btn-warning btn-sm">c_LogclassRules &raquo;</a>Manage classification rules</p>
+        <p><a href="~/c_Classification/Index" class="btn btn-warning btn-sm">c_Classification &raquo;</a>Manage classification (should be read for maximo)</p>
+        <p><a href="~/c_Subgroup/Index" class="btn btn-warning btn-sm">c_Subgroup &raquo;</a>Manage subgroups</p>
     </div>
 </div>
 
