c_datasource controller and tester

--- a/EqUiWebUi/Views/EQUISetup/_settings.cshtml
+++ b/EqUiWebUi/Views/EQUISetup/_settings.cshtml
@@ -8,7 +8,7 @@
     </div>
     <div class="card-body">
         <h4>Database connections</h4>
-        <p><a href="~/EQUISetup/RunDbTest" class="btn btn-primary btn-sm JQresultTriggerBtn">RunDbTests &raquo;</a>Test all databases in equi.c_datasources (login/select)</p>
+        <p><a href="~/c_datasource/index" class="btn btn-primary btn-sm">c_datasource &raquo;</a>Manage database connections. (Alert sources)</p>
         <hr />
         <h4>Datacollectors</h4>
         <p><a href="~/vasc/vasc/index" class="btn btn-primary btn-sm">VASC &raquo;</a>Manage VASC (ABB datacollector)</p>
