added VWSC diagrams

--- a/EqUiWebUi/Views/EQUISetup/_settings.cshtml
+++ b/EqUiWebUi/Views/EQUISetup/_settings.cshtml
@@ -12,6 +12,7 @@
         <hr />
         <h4>Datacollectors</h4>
         <p><a href="~/vasc/vasc/index" class="btn btn-primary btn-sm">VASC &raquo;</a>Manage VASC (ABB datacollector)</p>
+        <p><a href="~/vwsc/vwsc/index" class="btn btn-primary btn-sm">VWSC &raquo;</a>Manage VWSC (BOSCH weldtimer datacollector)</p>
         <hr />
         <h4>Classification</h4>
         <p><a href="~/Classification/ClassificationTool" class="btn btn-primary btn-sm">LogClassTool &raquo;</a>Tool for classification of errors (put errors in a class and subgroup)</p>
