added not locks on some high traffic tabels

--- a/EqUiWebUi/Views/Tableau/EmbeddedDesktop.cshtml
+++ b/EqUiWebUi/Views/Tableau/EmbeddedDesktop.cshtml
@@ -1,4 +1,9 @@
-﻿<body>
+﻿@{
+    ViewBag.Title = ViewBag.sheet;
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<body>
     @*render the viz*@
     <div id="viz"></div>
 </body>
