--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -1,4 +1,8 @@
-﻿
+﻿@{
+    ViewBag.Title = "Tableau";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
 <div class="jumbotron">
     <h2>Webviews tableau</h2>
     <h5>
@@ -50,7 +54,7 @@
 
         </div>
     </div>
-    
+
     <hr />
 
     <div class="card">
