--- a/EqUiWebUi/Views/Tableau/Embedded4K.cshtml
+++ b/EqUiWebUi/Views/Tableau/Embedded4K.cshtml
@@ -1,4 +1,9 @@
-﻿<html>
+﻿@{
+    ViewBag.Title = ViewBag.sheet;
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<html>
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="http://public.tableau.com/javascripts/api/tableau-2.0.0.min.js"></script>
