added more seed data for VASC

--- a/EqUiWebUi/Areas/Alert/Views/c_CPT600/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_CPT600/Index.cshtml
@@ -15,6 +15,7 @@
         <div class="text-muted">
             if an alert is matched with the locationtree and Assetroot of the CPT600 profile the sms will be send.
         </div>
+        <div class="alert alert-warning">CPT_600 is a GHENT ONLY it system. global SMS system needs to be inplemented.</div>
     </div>
 </div>
 
