--- a/EqUiWebUi/Areas/Alert/Views/c_CPT600/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_CPT600/Index.cshtml
@@ -22,77 +22,27 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Discription)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.System)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LocationTree)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AssetRoot)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ActivePloeg)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StartTime)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EndTime)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SMSlimit)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SMSsend)
-        </th>
-        <th></th>
-    </tr>
+@Html.Grid(Model).Named("c_CPT600Grid").Build(columns =>
+{
+    columns.Add(c => c.id).Titled("ID").InitialSort(GridSortOrder.Desc);
+    columns.Add(c => c.Discription).Titled("Discription");
+    columns.Add(c => c.System).Titled("System");
+    columns.Add(c => c.LocationTree).Titled("LocationTree");
+    columns.Add(c => c.AssetRoot).Titled("AssetRoot");
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Discription)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.System)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LocationTree)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AssetRoot)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ActivePloeg)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StartTime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EndTime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SMSlimit)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SMSsend)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.id })
-            </td>
-        </tr>
-    }
+    //add edit button
+    columns.Add(c => c)
+                .Titled("")
+                .Encoded(false)
+                .RenderedAs(c => MyFilters.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Edit") + "|" +
+                 MyFilters.IconActionLink(Url.Action("Delete", new { id = c.id }), "fa fa-trash", "", "Delete")
+                ).Filterable(false);
 
-</table>
+}).Filterable().Sortable().Pageable(pager =>
+{
+    pager.RowsPerPage = 17;
+}).Empty("Did not find anything").Css("table-hover"))
+
 
 @section scripts{
     <script>
