--- a/EqUiWebUi/Areas/user_management/Views/UserScreens/RenderUserScreen.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/UserScreens/RenderUserScreen.cshtml
@@ -34,6 +34,7 @@
         <script src="~/Scripts/jquery.signalR-2.2.2.js"></script>
         <script src="~/signalr/js"></script>
         <script>
+        //start signalR
         $.connection.hub.start()
             .done(function () {
                 console.log("SignalR connected");
