--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -166,6 +166,23 @@
 </div>
 
 <hr />
+<div class="card">
+    <div class="card-header bg-dark">
+        <h5 class="card-title text-white">
+            Bolting
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+        </h5>
+    </div>
+    <div class="card-body">
+
+        <p>
+            <a href="~/tableau/EmbeddedDesktop?workbook=Bolting&sheet=BoltingDash" class="btn btn-primary btn-sm">Bolting &raquo;</a>
+            Bolting
+        </p>
+    </div>
+</div>
+
+<hr />
 <div class="alert alert-info">
     <h3>The next card is for 4K displays!</h3>
 </div>
