--- a/EqUiWebUi/Views/Home/TestPage.cshtml
+++ b/EqUiWebUi/Views/Home/TestPage.cshtml
@@ -42,6 +42,8 @@
                 <div class="update-text">Bevat storingen groter dan 20 minuten of die meer dan 3 keer zijn voorgevallen <a href="~/Gadata/Table/PloegRapportWebgrid">@EqUiWebUi.defaultArea.ShiftReport</a> </div>
             </div>
         </div>
+
+        @MyHtmlHelpers.EquiRenderPanel("Testname")
     </div>
 </div>
 
