adding drilldown starting from tiplife

--- a/EqUiWebUi/Areas/Alert/Views/Alert/_ControlChart.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/_ControlChart.cshtml
@@ -36,7 +36,7 @@
         </div>
 
         <div class="card-body">
-            @Html.Action("_list", "L_controlLimits", new
+            @Html.Action("_ControlLimitsGrid", "L_controlLimits", new
             {
                 alarmobject = Model.alarmobject,
                 c_trigger_id = Model.c_tirgger_id,
