--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/TipLifeExpectations.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/TipLifeExpectations.cshtml
@@ -11,29 +11,7 @@
     </div>
 
     <div class="card-body">
-        @Html.Grid(Model).Named("TipLifeExpectations").Build(columns =>
-        {
-            columns.Add(c => c.controller_name).Titled("Robot").Filterable(true);
-            columns.Add(c => c.Tool_Nr).Titled("Nr");
-            columns.Add(c => c.LastTipchange).Titled("LastTipchange").Formatted("{0:dd-MM-yyyy HH:mm}").InitialSort(GridSortOrder.Desc);
-            columns.Add(c => c.maxWearInCalc).Titled("maxWear").Css("d-none d-lg-table-cell");
-            columns.Add(c => c.minWearInCalc).Titled("minWear").Css("d-none d-lg-table-cell");
-            columns.Add(c => c.countWearInCalc).Titled("count").Css("d-none d-lg-table-cell");
-
-            columns.Add(c => c.avgESTnSpotsFixedWearBefore100).Titled("SpotsFixedBefore100").Css("d-none d-lg-table-cell");
-            columns.Add(c => c.avgESTnSpotsMoveWearBefore100).Titled("SpotsMoveBefore100").Css("d-none d-lg-table-cell");
-
-            columns.Add(c => c.avgPartsFixedBefore100).Titled("PartsFixedBefore100");
-            columns.Add(c => c.avgPartsMoveBefore100).Titled("PartsMoveBefore100");
-            columns.Add()
-              .Encoded(false)
-              .Filterable(false)
-              .Sortable(false)
-              .RenderedAs(c => MyEquiToolkit.SbcuTool(c.controller_name, "1")).Css("d-none d-lg-table-cell"); //need to add the toolnumber in die model
-}).Sortable().Filterable(true).Pageable(pager =>
-{
-   pager.RowsPerPage = 20;
-}).Empty("No data found").Css("table-hover")
+          <div id="TipLifeExpectationsGrid" class="mvc-grid"></div>
     </div>
 
 </div>
@@ -43,5 +21,11 @@
         //full with screen
         $("#allcontent").removeClass("body-content");
         $("#allcontent").removeClass("container");
+
+        $('#TipLifeExpectationsGrid').mvcgrid({
+            sourceUrl: '@Url.Action("_TipLifeExpectationsGrid")', // Grid source url string
+            requestType: 'get', // Ajax grid request type
+            reload: true // Grid reload indicator
+        });
     </script>
 }
