change for STW040 data import

--- a/EqUiWebUi/Areas/Alert/Views/L_controlLimits/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/L_controlLimits/Index.cshtml
@@ -18,6 +18,7 @@
     //full with screen
     $("#allcontent").removeClass("body-content");
     $("#allcontent").removeClass("container");
+    $("#controllimitPlaceholder").html("Loading...");
     $("#controllimitPlaceholder").load("@Url.Action("_List", new { showIsDead = ViewBag.showIsDead })");
 </script>
 }
