--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -81,6 +81,11 @@
             </p>
 
             <p>
+                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=ObjectTreeLocationLevel" class="btn btn-primary btn-sm">ObjectTreeLocationLevel &raquo;</a>
+                Boommap met aantal sotringen per location. (filters voor top X en verantwoordelijkheidsgebied.)
+            </p>
+
+            <p>
                 <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=MDTMWTMTTRlijn" class="btn btn-primary btn-sm">MDTMWTMTTRlijn &raquo;</a>
                 Opvolging MDT MWT MTTR per zone / ploeg / lijn
             </p>
