--- a/EqUiWebUi/Views/Shared/_Layout.cshtml
+++ b/EqUiWebUi/Views/Shared/_Layout.cshtml
@@ -48,11 +48,11 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li class="dropdown-item">
-                            <a href="http://equi/EqUi_UtilManager/EqUi_UtilManger.application?Tool=SBCUstats">WeldgunData</a>
+                            <a href="http://gensvw1178.gen.volvocars.net/EqUi_UtilManager/EqUi_UtilManger.application?Tool=SBCUstats">WeldgunData</a>
                         </li>
                         <li class="dropdown-divider"></li>
                         <li class="dropdown-item">
-                            <a href="http://equi/EqUi_DigibordLauncher/EqUiDigibordLauncher.application">Start DigibordLauncher</a>
+                            <a href="http://gensvw1178.gen.volvocars.net/EqUi_DigibordLauncher/EqUiDigibordLauncher.application">Start DigibordLauncher</a>
                             <a href="@Url.Action("ShowWiki", "Wikis", new { area = "", id = 4 }, null)"><i class="fas fa-question-circle text-primary"></i></a>
                         </li>
                         <li class="dropdown-divider"></li>
