--- a/EqUiWebUi/Views/Error/Index.cshtml
+++ b/EqUiWebUi/Views/Error/Index.cshtml
@@ -29,12 +29,12 @@
 
 <script>
     function goback() {
-        window.history.back()
+        window.history.back();
     }
     //reload afhter 1 min
     setTimeout(
         function () {
             console.log('try reload page');
-            window.history.back()
+            goback();
         }, 1000*60);
 </script>
