--- a/EqUiWebUi/Views/Shared/Error.cshtml
+++ b/EqUiWebUi/Views/Shared/Error.cshtml
@@ -53,6 +53,12 @@
 
 <script>
     function goback() {
-        window.history.back()
+        window.history.back();
     }
+    //reload afhter 1 min
+    setTimeout(
+        function () {
+            console.log('try reload page');
+            goback();
+        }, 1000 * 60);
 </script>
