--- a/EqUiWebUi/Areas/HangfireArea/Views/c_schedule/Edit.cshtml
+++ b/EqUiWebUi/Areas/HangfireArea/Views/c_schedule/Edit.cshtml
@@ -47,7 +47,7 @@
                 <div id="jCron"></div>
                 <p></p>
                 <div>
-                    <input class="form-control text-box single-line" id="Cron" name="Cron" type="text" value="">
+                    <input class="form-control text-box single-line" id="jcron" name="jcron" type="text" value="">
                 </div>
                 @Html.ValidationMessageFor(model => model.jcron, "", new { @class = "text-danger" })
                 @Html.HelpTextFor(model => model.jcron)
@@ -77,7 +77,7 @@
     $('#jCron').cron({
     initial: "@(Model.jcron == null ? "0 * * * *" : Model.jcron)",
     onChange: function () {
-    $('#Cron').val($(this).cron("value"));
+        $('#jcron').val($(this).cron("value"));
     }
     });
     </script>
